[package]
name = "kindergarten"
version = "0.2.1"
edition = "2024"
description = "Async child process manager"
repository = "https://github.com/Ichmed/kindergarten.git"
license = "MIT"

[dependencies]
actix = { version = "0.13.5", optional = true }
actix-web = { version = "4.10.2", optional = true }
dashmap = "6.1.0"
futures = "0.3.31"
serde = "1.0.219"
tokio = { version = "1.44.2", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
] }
tokio-util = { version = "0.7.14", features = ["io"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[features]
actix = ["dep:actix"]
actix-web = ["dep:actix-web"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
